--- a/TowerDefense/TowerDefense.csproj
+++ b/TowerDefense/TowerDefense.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Components\CombatComponent.cs" />
     <Compile Include="Components\MovementComponent.cs" />
     <Compile Include="Configs\GameConstants.cs" />
+    <Compile Include="Configs\GameSettings.cs" />
     <Compile Include="Core\BaseEntity.cs" />
     <Compile Include="Core\IGameObject.cs" />
     <Compile Include="Data\SaveLoadSystem.cs" />
@@ -69,6 +70,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CyberFormBase.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\GameLevels\GameLevel1.cs">
@@ -110,6 +114,9 @@
     <Compile Include="Forms\ResultForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\ShopForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +136,9 @@
     <Compile Include="Managers\WaveManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CyberButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Utils\GameButton.cs">
       <SubType>Component</SubType>
     </Compile>
